# goexamples

./: .gitignore  build_cli.bat  build_cli.sh  mmlib.go
cgo_linux_a_bridge/: .gitignore  build_cli.sh  main.go
cgo_linux_a_bridge/bridge/: bridge.go
cgo_linux_a_bridge/bridge/mmlib/: Makefile
cgo_linux_a_file/: .gitignore  build_cli.sh  main.go  run_example
cgo_linux_so_file/: .gitignore  build_cli.sh  main.go  run.sh  show_info.sh
cgo_linux_so_file/mmlib/: Makefile  mmlib.cpp  mmlib.h
cgo_macos_a_file/: build_cli.sh
cgo_macos_a_file/mmlib/: mmlib.cpp  mmlib.h
cgo_macos_so_file/: build_cli.sh  main.go
cgo_macos_so_file/mmlib/: Makefile
cgo_win64_dll_cpp/: build_cli.bat  main.go
cgo_win64_dll_cpp/mmlib/: mmlib.cpp  mmlib.def
cgo_win64_dll_file/: .gitignore  build_cli.bat  main.go
cgo_win64_dll_file/mmlib/: CMakeLists.txt  mmlib.cpp  mmlib.def
cgo_win64_lib_bridge/: .gitignore  build_cli.bat  main.go
cgo_win64_lib_bridge/bridge/: bridge.go
cgo_win64_lib_bridge/bridge/mmlib/: clean.bat
cgo_win64_lib_file/: build_cli.bat  main.go
cgo_win64_lib_file/cli/: main.go
cgo_win64_lib_file/mmlib/: .gitignore  cmake_build.bat  cmake_setup.bat
mmlib/: CMakeLists.txt  Makefile  clean.bat
